--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,20 +17,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['игрово'] in *.ipynb files\n",
+      "Looking for: ['kde_kws'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SCRAPING_PARSING.ipynb\n",
-      "               : игрового мира. Он со, \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
+      "               : kde_kws=dict(cut=0),, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
+      "               : kde_kws=dict(cut=0),, \n"
      ]
     }
    ],
