--- a/math_LA_HW_8.ipynb
+++ b/math_LA_HW_8.ipynb
@@ -362,6 +362,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Dots represents the means of distributions, e.g.  \n",
+        "if $\\lambda=$ 2 then x = 0.5 (on average we observe 1 event in a half of time unit).\n",
+        "\n",
         "The exponential distribution graph is a graph of the probability density function which shows the distribution of distance or time taken between events.  \n",
         "$\\lambda$ represents the rate parameter, and it defines the mean number of events in an interval,  x represents the time.  \n",
         "The mean of the exponential distribution is $\\frac{1}{\\lambda}$  \n",
