--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -24,15 +24,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['kde_kws'] in *.ipynb files\n",
+      "Looking for: ['производн'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
-      "               : kde_kws=dict(cut=0),, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
-      "               : kde_kws=dict(cut=0),, \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW1.ipynb\n",
+      "               : производной для функ, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Advanced_Optimization.ipynb\n",
+      "               : производной в явном , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_sympy.ipynb\n",
+      "               : производной для функ, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_4.ipynb\n",
+      "               : производной функции:, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
+      "               : производную функции:, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_5.ipynb\n",
+      "               : производные функций:, \n"
      ]
     }
    ],
