--- a/math_LA_HW_6.ipynb
+++ b/math_LA_HW_6.ipynb
@@ -34,7 +34,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 312,
+      "execution_count": 1,
       "metadata": {
         "id": "na4yaRU2BIJh"
       },
@@ -52,7 +52,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 313,
+      "execution_count": 2,
       "metadata": {
         "id": "MJI0mH-mBJR1"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 314,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -110,7 +110,7 @@
               "True"
             ]
           },
-          "execution_count": 314,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -121,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 315,
+      "execution_count": 4,
       "metadata": {
         "id": "6dAneAayBKWz"
       },
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 316,
+      "execution_count": 5,
       "metadata": {
         "id": "cs3Dqu32BLqB"
       },
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 340,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -174,7 +174,7 @@
               "array([-12.12420243,   0.87465341])"
             ]
           },
-          "execution_count": 340,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -187,30 +187,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 386,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "array([3.49999633, 2.0000015 ])"
+              "(array([3.49999633, 2.0000015 ]), [3.4011973816621555, 1.9039955476301778])"
             ]
           },
-          "execution_count": 386,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "# analytical solving: y range is appr. 30, period 2pi / (5.5 -2.2) \n",
-        "guess = [np.log(30), 2*np.pi / (5.5-2.2)] \n",
+        "guess = [np.log(30), 2*np.pi / (5.5-2.2)]\n",
+        "# guess = res[0] \n",
         "res = curve_fit(f= func, xdata= x,ydata= y, p0= guess,  full_output= True )\n",
-        "res[0]"
+        "res[0], guess"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 387,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -219,7 +220,7 @@
               "array([3.49999633, 2.0000015 ])"
             ]
           },
-          "execution_count": 387,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -232,7 +233,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 388,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -245,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 389,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -260,14 +261,14 @@
         }
       ],
       "source": [
-        "plt.plot( xx, [lstats[xx][0][0] for xx in range(50)] )\n",
-        "plt.plot( xx, [lstats[xx][0][1] for xx in range(50)] )\n",
+        "plt.plot( np.arange(50), [lstats[xx][0][0] for xx in range(50)] )\n",
+        "plt.plot( np.arange(50), [lstats[xx][0][1] for xx in range(50)] )\n",
         "plt.yscale('log');"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 380,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -277,7 +278,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 381,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -286,7 +287,7 @@
               "array([3.49999633, 2.0000015 ])"
             ]
           },
-          "execution_count": 381,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -297,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 382,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -306,7 +307,7 @@
               "'Both actual and predicted relative reductions in the sum of squares\\n  are at most 0.000000 and the relative error between two consecutive iterates is at \\n  most 0.000000'"
             ]
           },
-          "execution_count": 382,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -317,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 383,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -326,7 +327,7 @@
               "3"
             ]
           },
-          "execution_count": 383,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -337,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 394,
+      "execution_count": 15,
       "metadata": {
         "id": "R6r3kYYCBND3"
       },
@@ -356,18 +357,11 @@
       "source": [
         "plt.figure(figsize=(12, 8))\n",
         "plt.plot(x, y, color='blue', label = 'initial data', linewidth = 5)\n",
-        "plt.plot(x, f(x, lstats[20][0][0], lstats[20][0][1]), color='red',\n",
-        "     label=f'fit: a={res[0][0]:5.3f}, b={res[0][1]:5.3f}')\n",
+        "plt.plot(x, func(x, lstats[20][0][0], lstats[20][0][1]), color='red',\n",
+        "     label= f'fit: a={res[0][0]:5.3f}, b={res[0][1]:5.3f}')\n",
         "plt.legend()\n",
         "plt.show()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
