--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,30 +17,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['производн'] in *.ipynb files\n",
+      "Looking for: ['cosine'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW1.ipynb\n",
-      "               : производной для функ, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Advanced_Optimization.ipynb\n",
-      "               : производной в явном , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_sympy.ipynb\n",
-      "               : производной для функ, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_4.ipynb\n",
-      "               : производной функции:, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
-      "               : производную функции:, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_5.ipynb\n",
-      "               : производные функций:, \n"
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
+      "               : cosine-similarity/) , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Numpy_HW.ipynb\n",
+      "               : Cosine similarity\\n\", \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/PySpark_Лекция_7.ipynb\n",
+      "               : CosineSimilarity.sca, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_Numpy_Matrix.ipynb\n",
+      "               : cosine( a, b ):\\n\",\n",
+      ", \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
+      "               : CosineSimilarity.sca, \n"
      ]
     }
    ],
