--- a/math_LA_Advanced_Optimization.ipynb
+++ b/math_LA_Advanced_Optimization.ipynb
@@ -84,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "NWAKsVOJpZ-N"
       },
@@ -135,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {
         "id": "1ZGker_DpZ-S"
       },
@@ -155,7 +155,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 5,
       "metadata": {
         "id": "E9JOiEs2pZ-W"
       },
@@ -163,10 +163,10 @@
         {
           "data": {
             "text/plain": [
-              "array([4.55815882, 2.79139019, 4.63856895])"
+              "array([4.52187855, 1.79880459, 3.92418001])"
             ]
           },
-          "execution_count": 26,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -188,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 6,
       "metadata": {
         "id": "05mso5ZvpZ-Y"
       },
@@ -199,8 +199,8 @@
           "text": [
             "Optimization terminated successfully.\n",
             "         Current function value: 0.000000\n",
-            "         Iterations: 252\n",
-            "         Function evaluations: 444\n"
+            "         Iterations: 217\n",
+            "         Function evaluations: 388\n"
           ]
         }
       ],
@@ -228,7 +228,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {
         "id": "kqD7G0q9pZ-a"
       },
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 8,
       "metadata": {
         "id": "cya_f8YMpZ-b"
       },
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 9,
       "metadata": {
         "id": "YIxiKaS3pZ-c"
       },
@@ -278,9 +278,9 @@
           "text": [
             "Optimization terminated successfully.\n",
             "         Current function value: 0.000000\n",
-            "         Iterations: 52\n",
-            "         Function evaluations: 64\n",
-            "         Gradient evaluations: 64\n"
+            "         Iterations: 55\n",
+            "         Function evaluations: 71\n",
+            "         Gradient evaluations: 71\n"
           ]
         }
       ],
@@ -290,27 +290,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "      fun: 1.2033983993182667e-16\n",
-              " hess_inv: array([[0.09964727, 0.19752582, 0.39479787],\n",
-              "       [0.19752582, 0.39635275, 0.79217666],\n",
-              "       [0.39479787, 0.79217666, 1.58819491]])\n",
-              "      jac: array([-3.86099499e-07,  2.83331278e-07, -5.05066433e-08])\n",
+              "      fun: 1.4037960003756645e-14\n",
+              " hess_inv: array([[0.10120565, 0.20016587, 0.40223313],\n",
+              "       [0.20016587, 0.40067985, 0.80558168],\n",
+              "       [0.40223313, 0.80558168, 1.62524701]])\n",
+              "      jac: array([ 3.10355705e-06,  6.89221098e-08, -8.95208574e-07])\n",
               "  message: 'Optimization terminated successfully.'\n",
-              "     nfev: 64\n",
-              "      nit: 52\n",
-              "     njev: 64\n",
+              "     nfev: 71\n",
+              "      nit: 55\n",
+              "     njev: 71\n",
               "   status: 0\n",
               "  success: True\n",
-              "        x: array([1.        , 1.        , 0.99999999])"
+              "        x: array([0.99999997, 0.99999993, 0.99999986])"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 11,
       "metadata": {
         "id": "-kC-qzU4pZ-f"
       },
@@ -367,7 +367,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 12,
       "metadata": {
         "id": "7Mbfj7F0pZ-g"
       },
@@ -378,28 +378,28 @@
           "text": [
             "Optimization terminated successfully.\n",
             "         Current function value: 0.000000\n",
-            "         Iterations: 57\n",
-            "         Function evaluations: 96\n",
-            "         Gradient evaluations: 96\n",
-            "         Hessian evaluations: 57\n"
+            "         Iterations: 49\n",
+            "         Function evaluations: 79\n",
+            "         Gradient evaluations: 79\n",
+            "         Hessian evaluations: 49\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "     fun: 7.438799683197452e-19\n",
-              "     jac: array([ 5.94091893e-08,  2.08492505e-07, -1.19751120e-07])\n",
+              "     fun: 4.021211753391784e-18\n",
+              "     jac: array([ 1.48923960e-07,  5.21228973e-07, -2.99307845e-07])\n",
               " message: 'Optimization terminated successfully.'\n",
-              "    nfev: 96\n",
-              "    nhev: 57\n",
-              "     nit: 57\n",
-              "    njev: 96\n",
+              "    nfev: 79\n",
+              "    nhev: 49\n",
+              "     nit: 49\n",
+              "    njev: 79\n",
               "  status: 0\n",
               " success: True\n",
               "       x: array([1., 1., 1.])"
             ]
           },
-          "execution_count": 34,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -429,7 +429,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 13,
       "metadata": {
         "id": "hfEDazvlpZ-i"
       },
@@ -449,7 +449,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 14,
       "metadata": {
         "id": "DYV0tROgpZ-j"
       },
@@ -469,7 +469,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 15,
       "metadata": {
         "id": "-cIe7tSmpZ-k"
       },
@@ -485,7 +485,7 @@
               "       x: array([1., 1., 1., 1.])"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
