--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -24,22 +24,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['cosine'] in *.ipynb files\n",
+      "Looking for: ['sklearn'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_Darwinbooks_recommend.ipynb\n",
-      "               : cosine-similarity/) , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Numpy_HW.ipynb\n",
-      "               : Cosine similarity\\n\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/PySpark_Лекция_7.ipynb\n",
-      "               : CosineSimilarity.sca, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
+      "               : sklearn.linear_model, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_SQL.ipynb\n",
+      "               : sklearn.linear_model, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa_Kuzmin_Pandas.ipynb\n",
+      "               : sklearn.model_select, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
+      "               : sklearn.model_select, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
+      "               : sklearn.preprocessin, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
+      "               : sklearn.model_select, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_bs_conf_int.ipynb\n",
+      "               : sklearn\\n\",\"import s, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_Numpy_Matrix.ipynb\n",
-      "               : cosine( a, b ):\\n\",\n",
-      ", \n",
+      "               : sklearn.decompositio, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : CosineSimilarity.sca, \n"
+      "               : sklearn.model_select, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
+      "               : sklearn.datasets imp, \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
+      "               : sklearn.pairwise_dis, \n"
      ]
     }
    ],
