--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,40 +17,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['sklearn'] in *.ipynb files\n",
+      "Looking for: ['go.Figure'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
-      "               : sklearn.linear_model, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_SQL.ipynb\n",
-      "               : sklearn.linear_model, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa_Kuzmin_Pandas.ipynb\n",
-      "               : sklearn.model_select, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
-      "               : sklearn.model_select, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/DLS_simpsons_baseline.ipynb\n",
-      "               : sklearn.preprocessin, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : sklearn.model_select, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_bs_conf_int.ipynb\n",
-      "               : sklearn\\n\",\"import s, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_Numpy_Matrix.ipynb\n",
-      "               : sklearn.decompositio, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : sklearn.model_select, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
-      "               : sklearn.datasets imp, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
-      "               : sklearn.pairwise_dis, \n"
+      "               : go.Figure()\\n\",\n",
+      "    , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
+      "               : go.Figure(mybar,\\n\",, \n"
      ]
     }
    ],
@@ -137,8 +120,10 @@
     "\n",
     "def rename_files_in_dir(dir_path):\n",
     "    for count, filename in enumerate(os.listdir(dir_path)):\n",
+    "\n",
     "        # new_filename = filename.replace(\"._\", \"_\")        \n",
     "        new_filename = filename.replace(\"NETOLOGY_\", \"\")\n",
+    "        \n",
     "        # dst = \"file_\" + str(count) + \".ext\"\n",
     "        src = dir_path + '/' + filename\n",
     "        dst = dir_path + '/' + new_filename\n",
@@ -151,6 +136,26 @@
     "\n",
     "# rename all files in current folder\n",
     "rename_files_in_dir( os.getcwd() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir_path"
    ]
   }
  ],
