Power analysis. A/B tests evaluation

--- a/stats_Power_Min_sample_size_HW.ipynb
+++ b/stats_Power_Min_sample_size_HW.ipynb
@@ -114,7 +114,7 @@
    "metadata": {},
    "source": [
     "### `Webinar`\n",
-    "[Как и зачем оценивать размер выборки для A/B теста?](https://www.youtube.com/watch?v=2nP_gcut7SU])"
+    "[How and why do we neead evaluate A/B tests?](https://www.youtube.com/watch?v=2nP_gcut7SU])"
    ]
   },
   {
