--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,103 +17,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['width'] in *.ipynb files\n",
+      "Looking for: ['px.', 'title'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
-      "               : width: 10em;\\n\",\n",
-      "   , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ2.ipynb\n",
-      "               : width=0, antialiased, \n",
+      "               : px.histogram(data_cr, title('Процент ошибо, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
-      "               : width: 10em;\\n\",\"  b, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_funcs_group.ipynb\n",
-      "               : width=1)\\n\",\n",
-      "    \"ax, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_HW_SQL.ipynb\n",
-      "               : width=\\\"24px\\\">\\n\",\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/SCRAPING_PARSING.ipynb\n",
-      "               : width=\\\"24px\\\">\\n\",\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa_Kuzmin_Pandas.ipynb\n",
-      "               : width=\\\"24px\\\">\\n\",\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ3.ipynb\n",
-      "               : width=0, antialiased, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_JOIN_SQL_HW_.ipynb\n",
-      "               : width', -1)\\u001b[39, \n",
+      "               : px.line(gross_by_gen, title</th>\\n\",\"     , \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
-      "               : width=400></p>\\n\",\n",
-      " , \n",
+      "               : px.histogram(df['%'], title\": {\n",
+      "          , \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
-      "               : width=\\\"24px\\\">\\n\",\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_8.ipynb\n",
-      "               : width=.8, label= f'd, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_LABa.ipynb\n",
-      "               : width=\\\"24px\\\">\\n\",\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_lecture_04.ipynb\n",
-      "               : Width\\\": false});\\n\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_t_Tests.ipynb\n",
-      "               : width=0.3)\\n\",\n",
-      "    \", \n",
+      "               : px.line(df_RU, x='tr, titlesize=SMALL_SIZE, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/COVID-19_visualization.ipynb\n",
-      "               : width\": 0.5\n",
-      "        , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/Pandas_ESSENTIALS.ipynb\n",
-      "               : Width\\\": false});\\n\", \n",
+      "               : px.choropleth(df, lo, title\": {\n",
+      "          , \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : width=900></p>\\n\"\n",
-      "  , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/python_open_files.ipynb\n",
-      "               : width=1);\"]},{\"cell_, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW9.ipynb\n",
-      "               : width = 1, color = \\, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_6.ipynb\n",
-      "               : width = 5)\\n\",\n",
-      "     , \n",
+      "               : px.scatter(X_viz, x=, title(\\\"Model based , \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
-      "               : width=400></p>\"\n",
-      "   ], \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/bash.ipynb\n",
-      "               : width=device-width, , \n",
+      "               : px.line(df_pop, x='P, title(f\\\"Sample esti, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : width: 10em;\\n\",\n",
-      "   , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Power_Min_sample_size_HW.ipynb\n",
-      "               : width=.3)\\n\",\n",
-      "    \"p, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Case_Power_MinSampleSize_HW.ipynb\n",
-      "               : width=.3)\\n\",\n",
-      "    \"p, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_bs_conf_int.ipynb\n",
-      "               : width=.3);\"]},{\"cell, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_Numpy_Matrix.ipynb\n",
-      "               : width=0.1, head_leng, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
-      "               : width', 400)\\n\",\"pd., \n",
+      "               : px.box(df, x='Genre', title\": {\n",
+      "          , \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
-      "               : width=\\\"700\\\" height, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/MathPlotLib_VIZ.ipynb\n",
-      "               : width=0.3)\\n\",\n",
-      "    \", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_DispAnalysis_ABtests.ipynb\n",
-      "               : width=900></p>\\n\",\n",
-      " , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_Masterclass.ipynb\n",
-      "               : width=900></p>\\n\",\n",
-      " , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_Capstone.ipynb\n",
-      "               : width = 5)\\n\",\n",
-      "     , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_5.ipynb\n",
-      "               : width=0, antialiased, \n"
+      "               : px.bar(x= df.columns, titletext\\\" text-anc, \n"
      ]
     }
    ],
