--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -17,39 +17,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['px.', 'title'] in *.ipynb files\n",
+      "Looking for: ['.style.bar'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
-      "               : px.histogram(data_cr, title('Процент ошибо, \n",
+      "               : .style.bar(align='le, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
-      "               : px.line(gross_by_gen, title</th>\\n\",\"     , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidential_intervals_HW.ipynb\n",
-      "               : px.histogram(df['%'], title\": {\n",
-      "          , \n",
+      "               : .style.bar()\\n\",\"\\n\", \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
-      "               : px.line(df_RU, x='tr, titlesize=SMALL_SIZE, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/COVID-19_visualization.ipynb\n",
-      "               : px.choropleth(df, lo, title\": {\n",
-      "          , \n",
+      "               : .style.bar(align='mi, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : px.scatter(X_viz, x=, title(\\\"Model based , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Confidence_Intervals.ipynb\n",
-      "               : px.line(df_pop, x='P, title(f\\\"Sample esti, \n",
+      "               : .style.bar(align='mi, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : px.box(df, x='Genre', title\": {\n",
-      "          , \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/math_LA_HW_7.ipynb\n",
-      "               : px.bar(x= df.columns, titletext\\\" text-anc, \n"
+      "               : .style.bar(align='le, \n"
      ]
     }
    ],
