--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -165,94 +165,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"abcabcbb\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"bbbbb\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"pwwkew\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s=\"aab\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s= \"dvdf\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n",
-      "ab\n",
-      "abc\n"
+      "1 3 [0, 0, 1]\n",
+      "5 2 [0, 0, 0]\n",
+      "7 1 [0, 0, 1]\n",
+      "11 0 [0, 0]\n",
+      "True\n",
+      "0\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "flowerbed = [0,0,1,0,0,0,0,0,1,0,0]\n",
+    "n = 4\n",
     "\n",
-    "seq = \"\"\n",
-    "res = \"\"\n",
+    "flowerbed = [0] + flowerbed + [0]\n",
+    "l = len(flowerbed)\n",
     "\n",
-    "for i in s:\n",
-    "\n",
-    "    if i not in seq:\n",
-    "            seq += i\n",
-    "            print(seq)\n",
-    "    else:\n",
-    "            # shift pointer 1 position to the right of previous match\n",
-    "            seq = seq[seq.index(i)+1:] + i\n",
-    "\n",
-    "    if len(res) < len(seq):\n",
-    "        res = seq   \n",
-    "\n",
-    "max(len(seq), len(res))\n",
-    "# len(seq)\n",
-    " "
+    "i= 0\n",
+    "while i <= l:\n",
+    "#     i += 1\n",
+    "#     print(i)\n",
+    "    if flowerbed[i:i + 3] == [0,0,0]:\n",
+    "        n -= 1\n",
+    "        i += 1\n",
+    "        print(i,n, flowerbed[i:i + 3])\n",
+    "    if n < 1:\n",
+    "        print( True)\n",
+    "        break\n",
+    "    i += 1\n",
+    "print( n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [0, 1, 0]\n",
+      "1 [1, 0, 0]\n",
+      "2 [0, 0, 0]\n",
+      "3 [0, 0, 0]\n",
+      "4 [0, 0, 0]\n",
+      "5 [0, 0, 1]\n",
+      "6 [0, 1, 0]\n",
+      "7 [1, 0]\n",
+      "8 [0]\n",
+      "9 []\n",
+      "10 []\n"
+     ]
+    }
+   ],
+   "source": [
+    "i=-1\n",
+    "l = len(flowerbed)\n",
+    "while i <= l:\n",
+    "    i += 1\n",
+    "    print(i, flowerbed[i:i + 3])\n",
+    "    # if flowerbed[i:i + 3]"
    ]
   }
  ],
