--- a/SEARCH.ipynb
+++ b/SEARCH.ipynb
@@ -24,21 +24,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking for: ['.style.bar'] in *.ipynb files\n",
+      "Looking for: ['gridsearch'] in *.ipynb files\n",
       "Incl. all occurrences: True\n",
       "Case sensitive: False\n",
       "File:          : Search result:\n",
       "................................................................................\n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_A_B_testing_HW.ipynb\n",
-      "               : .style.bar(align='le, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_case_study_linreg_confidence_interval.ipynb\n",
-      "               : .style.bar()\\n\",\"\\n\", \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_Data_Visualization_HW.ipynb\n",
-      "               : .style.bar(align='mi, \n",
-      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ML_linear_polynomial_regression.ipynb\n",
-      "               : .style.bar(align='mi, \n",
       "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/stats_CS_videogames_HW.ipynb\n",
-      "               : .style.bar(align='le, \n"
+      "               : GridSearchCV\\n\",\n",
+      "   , \n",
+      "/Users/velo1/SynologyDrive/GIT_syno/Mac/Netology/ABD_22_Total_HW.ipynb\n",
+      "               : GridSearchCV\"]},{\"ce, \n"
      ]
     }
    ],
