--- a/ML_linear_polynomial_regression.ipynb
+++ b/ML_linear_polynomial_regression.ipynb
@@ -128,7 +128,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 82,
       "metadata": {
         "id": "EHZa6o_qW1LR"
       },
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 83,
       "metadata": {
         "id": "qlEjVLBEW1Lg"
       },
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 84,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -298,7 +298,7 @@
               "4      4       1      0        1  "
             ]
           },
-          "execution_count": 36,
+          "execution_count": 84,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -312,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -322,7 +322,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 86,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -337,7 +337,7 @@
               "(804, 12)"
             ]
           },
-          "execution_count": 38,
+          "execution_count": 86,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -357,7 +357,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 87,
       "metadata": {
         "id": "D6MhiMPvW1Li"
       },
@@ -370,7 +370,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 88,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -385,7 +385,7 @@
               "(array([[-0.1725205]]), array([24764.55900606]))"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 88,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -398,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 89,
       "metadata": {
         "id": "41ifDrOjW1Lj"
       },
@@ -409,7 +409,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 90,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -477,7 +477,7 @@
               "4  16339.170324"
             ]
           },
-          "execution_count": 42,
+          "execution_count": 90,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 91,
       "metadata": {},
       "outputs": [
         {
@@ -504,7 +504,7 @@
               "Name: Price, dtype: float64"
             ]
           },
-          "execution_count": 43,
+          "execution_count": 91,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -515,7 +515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 92,
       "metadata": {},
       "outputs": [
         {
@@ -537,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 93,
       "metadata": {},
       "outputs": [
         {
@@ -550,7 +550,7 @@
               "       [21343.13239471]])"
             ]
           },
-          "execution_count": 45,
+          "execution_count": 93,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -562,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 94,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -612,7 +612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 95,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -667,7 +667,7 @@
               "Index: []"
             ]
           },
-          "execution_count": 47,
+          "execution_count": 95,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -679,7 +679,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 105,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -706,7 +706,7 @@
               "       dtype='object'))"
             ]
           },
-          "execution_count": 48,
+          "execution_count": 105,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -714,8 +714,32 @@
       "source": [
         "# Convert categorical variable into dummy/indicator variables.\n",
         "X1 = data.copy() \n",
-        "X1 = pd.get_dummies(data.loc[:, [\"Make\", \"Model\"]])#, drop_first= True)\n",
+        "X1 = pd.get_dummies(data.loc[:, [\"Make\", \"Model\"]], sparse= True)#, drop_first= True)\n",
         "X1.shape, X1.columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 104,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 804 entries, 0 to 803\n",
+            "Data columns (total 1 columns):\n",
+            " #   Column   Non-Null Count  Dtype\n",
+            "---  ------   --------------  -----\n",
+            " 0   Mileage  804 non-null    int64\n",
+            "dtypes: int64(1)\n",
+            "memory usage: 6.4 KB\n"
+          ]
+        }
+      ],
+      "source": [
+        "X.info(memory_usage='deep')"
       ]
     },
     {
@@ -1765,7 +1789,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 81,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -9751,7 +9775,6 @@
       ]
     },
     {
-      "attachments": {},
       "cell_type": "markdown",
       "metadata": {},
       "source": [
